overflow fix

--- a/page2/css/custom.css
+++ b/page2/css/custom.css
@@ -146,7 +146,11 @@ body {
 @media screen and (max-width: 768px) {
 	.logo {
 		visibility: hidden;
+		top: 0px;
+		left: 0px;
 	}
+
+
 }
 
 /* Main Slideshow */
